[gd_scene load_steps=24 format=2]

[ext_resource path="res://GodotPlatformerAssets/Sprites/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://GodotPlatformerAssets/Audio/mixkit-arcade-game-jump-coin-216.wav" type="AudioStream" id=3]
[ext_resource path="res://GodotPlatformerAssets/Audio/Studio_Project_V1.mp3" type="AudioStream" id=4]
[ext_resource path="res://GodotPlatformerAssets/Audio/CoinCollect.tres" type="AudioStream" id=5]
[ext_resource path="res://GodotPlatformerAssets/Audio/Studio_Project.mp3" type="AudioStream" id=6]
[ext_resource path="res://GodotPlatformerAssets/Audio/BG.mp3" type="AudioStream" id=7]
[ext_resource path="res://GodotPlatformerAssets/Audio/Dead.mp3" type="AudioStream" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 9.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame_coords:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:frame_coords:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "fall"
length = 0.1

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1e-05, 1 ),
"update": 1,
"values": [ Vector2( 1, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/idle/node = SubResource( 11 )
states/idle/position = Vector2( 80, 99 )
states/jump/node = SubResource( 17 )
states/jump/position = Vector2( 80, 196 )
states/walk/node = SubResource( 12 )
states/walk/position = Vector2( 253, 99 )
transitions = [ "idle", "jump", SubResource( 18 ), "jump", "idle", SubResource( 19 ), "idle", "walk", SubResource( 20 ), "walk", "idle", SubResource( 21 ) ]
start_node = "idle"
graph_offset = Vector2( -444.495, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
region_rect = Rect2( 1.60599, 14, 95.394, 95.1703 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 14.7 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fall = SubResource( 22 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 16 )
anims/walk = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 0.183

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CollectCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
